# Don-CRE-Project

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json
app/: layout.tsx  page.tsx
backend/: .gitignore  _repro_test.py  graph.py  main.py  pyproject.toml  pytest.ini  requirements.txt  state.py
backend/agents/: __init__.py  base.py  document_classifier.py  document_parsing.py  document_segmentation.py  lease_abstraction.py  ocr_agent.py  red_flag_detection.py  rent_roll.py  risk_scoring.py  rsf_reconciliation.py  synthesis.py  universal_extractor.py
backend/config/: __init__.py  extraction_prompts.py
backend/cre_document_intelligence_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/models/: schemas.py
backend/services/: __init__.py  document_processor.py  langgraph_pipeline.py  pipeline.py
backend/tests/: __init__.py  conftest.py  test_e2e.py  test_pipeline_e2e.py
components/dashboard/: charts.tsx  document-upload.tsx  documents-list.tsx  header.tsx  lease-abstracts-table.tsx  metrics-grid.tsx  score-card.tsx  sidebar.tsx  tab-content.tsx  tenant-table.tsx  what-to-get-next.tsx
frontend/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  page.tsx
frontend/hooks/: use-documents.ts
frontend/lib/: ai-client.ts  api.ts  mock-data.ts  normalize.ts  store.ts  transform-analysis.ts  types.ts
lib/: api.ts  mock-data.ts  transform-analysis.ts  types.ts
scripts/: live_test.py  live_test_real_pdf.py  test_api.py  test_backend.py  test_e2e.py
(+24 files in other folders)
